navbar styles updated

--- a/miniblog/src/components/Navbar.module.css
+++ b/miniblog/src/components/Navbar.module.css
@@ -1,53 +1,62 @@
-.navbar{
-    display: flex;
-    box-shadow: rgba(0, 0, 0, .15) 0px -2px 10px 0px;
-    justify-content: space-between;
-    align-items: center;
-    padding: .5em 2em;
+.navbar {
+  display: flex;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px -2px 10px 0px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em 2em;
 }
 
 .brand {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 
 .brand span {
-    font-weight: 900;
-    text-transform: uppercase;
+  font-weight: 900;
+  text-transform: uppercase;
 }
 
 .links_list {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 
 .links_list {
-    margin-right: 1em;
+  margin-right: 1em;
 }
 
 .links_list li a {
-    padding: .4em .6em;
+  padding: 0.4em 0.6em;
 }
 
-.active{
-    background-color: #000;
-    color: #fcfcfc;
-    border-radius: 5px;
+.active {
+  background-color: #000;
+  color: #fcfcfc;
+  border-radius: 5px;
 }
 
 @media (max-width: 768px) {
+  .navbar {
+    padding: 0.5em 1em;
+  }
 
-    .navbar{
-        padding: .5em 1em;
-    }
+  .links_list {
+    margin-right: 0;
+  }
 
-    .links_list {
-        margin-right: 0;
-    }
-
-    .links_list li a {
-        font-weight: bold;
-        font-size: .6em;
-    }
-    
+  .links_list li a {
+    font-weight: bold;
+    font-size: 1em;
+  }
 }
 
+@media (max-width: 480px) {
+  .links_list li a {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 375px) {
+  .links_list li a {
+    font-size: 0.6em;
+  }
+}
