--- a/miniblog/src/pages/Home/Home.module.css
+++ b/miniblog/src/pages/Home/Home.module.css
@@ -29,3 +29,31 @@
 .noposts a{
     padding: 10px 25px;
 }
+
+@media (max-width: 768px){
+    .home h1{
+        text-align: center;
+        font-size: 1.5em;
+        width: 80%;
+    }
+
+    .home button {
+        font-size: .8em;
+    }
+
+    input::placeholder{
+        font-size: .8em;
+    }   
+    
+}
+
+@media (max-width: 480px){
+    .home h1 {
+        font-size: 1.3em;
+    }
+
+    input::placeholder{
+        font-size: .6em;
+    } 
+
+}
