--- a/miniblog/src/pages/Post/Post.module.css
+++ b/miniblog/src/pages/Post/Post.module.css
@@ -1,13 +1,20 @@
 .post_container {
+    width: 60%;
+    margin: 0 auto;
     text-align: center;
 }
 
 .post_container img {
-    max-width: 600px;
+    max-width: 100%;
+    margin-bottom: 1em;
 }
 
 .post_container h3 {
     margin-bottom: .2em;
+}
+
+.post_container p{
+    text-align: justify;
 }
 
 .post_container .tags {
