--- a/miniblog/src/components/Navbar.module.css
+++ b/miniblog/src/components/Navbar.module.css
@@ -17,6 +17,7 @@
 
 .links_list {
   display: flex;
+  align-items: center;
   list-style: none;
 }
 
@@ -24,7 +25,7 @@
   margin-right: 1em;
 }
 
-.links_list li a {
+.links_list li a, .logoutbtn {
   padding: 0.4em 0.6em;
 }
 
@@ -43,20 +44,20 @@
     margin-right: 0;
   }
 
-  .links_list li a {
+  .links_list li a, .logoutbtn{
     font-weight: bold;
     font-size: 1em;
   }
 }
 
 @media (max-width: 480px) {
-  .links_list li a {
+  .links_list li {
     font-size: 0.8em;
   }
 }
 
-@media (max-width: 375px) {
-  .links_list li a {
+@media (max-width: 405px) {
+  .links_list li {
     font-size: 0.6em;
   }
 }
