--- a/miniblog/src/components/Navbar.module.css
+++ b/miniblog/src/components/Navbar.module.css
@@ -36,6 +36,11 @@
 }
 
 @media (max-width: 768px) {
+
+  .brand {
+    font-size: 1em;
+  }
+
   .navbar {
     padding: 0.5em 1em;
   }
@@ -51,8 +56,12 @@
 }
 
 @media (max-width: 480px) {
+  .navbar {
+    padding: 0.3em .7em;
+  }
+
   .links_list li {
-    font-size: 0.8em;
+    font-size: 0.7em;
   }
 }
 
