dashboard style updated

--- a/miniblog/src/pages/Dashboard/Dashboard.module.css
+++ b/miniblog/src/pages/Dashboard/Dashboard.module.css
@@ -28,22 +28,22 @@
   padding: 10px 25px;
 }
 
-.post_header,
-.post_row {
+.post_header {
   display: flex;
   justify-content: space-between;
+  font-weight: bold;
+  border-bottom: 2px solid #ccc;
   width: 80%;
   padding: 10px;
 }
 
-.post_header {
-  font-weight: bold;
-  border-bottom: 2px solid #ccc;
-}
-
 .post_row {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #b8b8b8;
+  border-bottom: 1px solid #eee;
+  width: 80%;
+  padding: 10px;
 }
 
 .post_row p {
@@ -55,5 +55,13 @@
   margin: 0 5px;
   height: 30px;
   width: 100px;
-  font-size: .7em;
+  font-size: 0.7em;
+}
+
+@media (max-width: 820px) {
+  .post_row {
+    flex-direction: column;
+    width: 90%;
+  }
+  
 }
